# prettyconf

./: .coveragerc  .coverrals.yml  .gitignore  .travis.yml  AUTHORS.md  CHANGES.txt  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  prettyconf.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  taplo.toml  tox.ini
.ci/: deps.linux.sh  deps.osx.sh  pre.linux.sh  pre.osx.sh
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: release.yml  tests.yml
docs/: Makefile  make.bat
docs/source/: advanced.rst  casts.rst  changelog.rst  conf.py  faq.rst  index.rst  installation.rst  introduction.rst  loaders.rst  usage.rst
prettyconf/: __init__.py  casts.py  configuration.py  exceptions.py  loaders.py  parsers.py
tests/: base.py  conftest.py  factory.py  test_casts.py  test_cfgfile.py  test_commandline.py  test_config.py  test_envfile.py  test_envvar.py  test_filediscover.py  test_loaders.py  test_parameterstore.py
tests/files/: config.ini  envfile  invalid.ini  invalid_chars.cfg
tests/files/recursive/valid/: settings.ini
