[project]
name = "prettyconf"
version = "2.3.0"
description = "Separation of settings from code."
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE.txt", "AUTHORS.md"]
authors = [{ name = "Osvaldo Santana Neto", email = "prettyconf@osantana.me" }]
keywords = ["asyncio", "dispatcher", "message", "microservices", "tasks"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
aws = ["boto3>=1.28.0,<2.0.0"]

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-runner>=6.0.0,<7.0.0",
    "coveralls>=3.3.0,<4.0.0",
    "ruff>=0.0.290,<0.1.0"
]

[project.urls]
Source = "https://github.com/osantana/prettyconf"
Download = "https://github.com/osantana/prettyconf/releases"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.format]
line-ending = "lf"
quote-style = "single"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
